--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,7 @@ body {
   transition: .3s ease;
 }
 
-.custom-navbar {
+.navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
